--- a/pages/Metodo.html
+++ b/pages/Metodo.html
@@ -51,6 +51,12 @@
                     <a href="https://wa.me/5491135762230?text=Hola!%20Me%20gustaría%20recibir%20más%20información%20acerca%20de%20los%20cursos%20de%20idioma%20que%20ofrecen. %20Muchas%20gracias!" target="_blank">
                         <img class="iconoWpp" src="../img/wpp.png" alt="whats app">
                     </a>
+
+                <!--icono que dirigen a Linked In-->
+                    <a 
+                    href="https://www.linkedin.com/in/fernanda-roig-bbaa7812/" target="_blank">
+                        <img class="iconoLinkedin" src="../img/linkedinn.png" alt="mail">
+                    </a>
                 
         </div>
         
